# PL8WRDS

./: .bandit.yaml  .dockerignore  .env.development  .env.example  .env.production  .env.staging  .env.testing  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE_REFACTOR.md  CHANGELOG.md  CICD_GUIDE.md  CLAUDE.md  DATA_SOURCE_IMPROVEMENT_PLAN.md  Dockerfile  GAME_DESIGN.md  MONITORING.md  README.md  README_COMPLETE.md  REFACTORING_PROGRESS.md  SCORING_ARCHITECTURE.md  SPRING_CLEANING_SUMMARY.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_GUIDE.md  TESTING.md  USAGE_EXAMPLES.md  VERSION.json  clean_corpus.py  cleanup_and_organize.py  cli_analyze.js  cli_distribution_analysis.js  demo_game_api.js  demo_scoring.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  download_frequency_sources.py  filter_quality_vocabulary.py  filter_wordnet_vocabulary.py  (+22 more)
.claude/agents/: data-curator.md  game-data-publisher.md  ml-engineer-core.md  ml-scoring-engineer.md  nlp-data-scientist.md  pl8wrds-product-owner.md  product-marketing-strategist.md  python-backend-architect.md  python-backend-developer.md  react-frontend-developer.md
.github/workflows/: ci-cd.yml  performance.yml  release.yml  security.yml
analysis_output/: analysis_statistics.json  list_membership_distribution.json
app/: main.py
app/application/: __init__.py  interfaces.py  services.py  use_cases.py
app/core/: __init__.py  config.py  container.py  error_handlers.py  exceptions.py
app/domain/: __init__.py  entities.py  value_objects.py
app/infrastructure/: __init__.py  external_services.py  repositories.py
app/models/: __init__.py  scoring.py
app/monitoring/: __init__.py  alerting.py  errors.py  health.py  logger.py  metrics.py  middleware.py  tracing.py
app/routers/: combinations.py  corpus.py  dataset.py  dictionary.py  map_pinning.py  metrics.py  monitoring.py  prediction.py  scoring.py  solver.py
app/services/: combination_generator.py  feature_extraction.py  frequency_scorer.py  information_scorer.py  orthographic_scorer.py  prediction_service.py  recombination_metrics.py  regression_trainer.py  scoring_service.py  solver_service.py  word_service.py
client_game_data/: README.md
client_game_data/manifests/: collection.json
data/: letter_frequencies.json  plates.txt
data/corpus_sources/: google_books_academic_sample.json  pl8wrds_en_50k.json  pl8wrds_google_books_academic.json  pl8wrds_wiktionary_academic.json  wiktionary_academic_words.json
data_processing/: README.md  frequency_source_analysis.py  get_real_frequency_data.py  switch_to_hermit_dave.py
docker/nginx/: nginx.conf  nginx.prod.conf
docker/redis/: redis.conf
docs/: API.md  API_REFERENCE.md  CONTRIBUTING.md  GAME_MECHANICS.md  GEOGRAPHIC_FLIGHT_PATHS.md  QUICKSTART.md  SETUP.md  TROUBLESHOOTING.md
game_generation/: README.md  gameplay_pipeline.py  generate_optimized_word_game.py  ultra_fast_final_scoring.py
model_building/: README.md  build_comprehensive_information_model.py  build_orthographic_model.py  precompute_orthographic_scores.py  rebuild_all_models.py
modular_data/: README.md  curated_list_memberships.json  pronunciations.json  words.json
modular_data/derived/: rhyme_groups.json
monitoring/: alert_rules.yml  docker-compose.monitoring.yml  prometheus.yml
old_version_complete/: README.md  index.html  package.json
old_version_complete/data/: letter_combinations_with_possibilities_and_difficulties.jsonl
old_version_complete/src/data/: plateData.js  wordData.js
pl8wrds-game/: .eslintignore  .gitignore  .prettierignore  .prettierrc  README.md  REFACTORING_PROGRESS.md  package-lock.json  package.json  tsconfig.json
pl8wrds-game/.husky/: pre-commit
pl8wrds-game/public/: manifest.json  robots.txt
pl8wrds-game/src/: App.css  App.test.tsx  App.tsx  index.tsx  reportWebVitals.ts
pl8wrds-game/src/components/: CollectionModal.tsx  DistributionCharts.tsx  ErrorMessage.tsx  FloatingScore.tsx  FoundWordsList.tsx  GameControls.tsx  InfoModal.tsx  LoadingScreen.tsx  PlateDisplay.tsx  PlateRegistration.tsx  PlateStatistics.tsx  ScoreBoard.tsx  ScoreBreakdown.tsx  ScoreBreakdownModal.tsx  WordInput.tsx
pl8wrds-game/src/hooks/: useDistributionData.ts  useGame.ts  useGameActions.ts  useGameAnimations.ts  useGameCore.ts  useGameData.ts  useGameState.ts  useGameStorage.ts  usePercentiles.ts  useScoreBreakdown.ts  useWordInput.ts
pl8wrds-game/src/services/: api.ts  dataLoader.ts  gameData.ts  gameStatistics.ts  plateManager.ts  solutionProcessor.ts  storage.ts  wordValidator.ts
pl8wrds-game/src/styles/: backgrounds.css  base.css  collection.css  components.css  forms.css  index.css  layout.css  modals.css  plate.css  responsive.css  variables.css  vintage.css
pl8wrds-game/src/theme/: ThemeProvider.tsx  VintageTheme.ts  index.ts
pl8wrds-game/src/types/: assets.d.ts  game.ts
public/data/: game_difficulty_data.json
scripts/: update_memberships.js
scripts/wordlists/: celestial_bodies.js  classic_monsters.js  cooking_terms.js  fantasy_rpg.js  nautical_terms.js  weather_phenomena.js
src/: App.vue  main.js  style.css
src/analysis/: PlateAnalyzer.js
src/components/: DataTest.vue  LicensePlate.vue  PlateInfoModal.vue  WordCard.vue
src/composables/: useDifficulty.js  useGame.js  usePlateAnalysis.js  usePlateColors.js
src/core/: game.js  gameController.js  gameState.js  scoreFactory.js
src/data/: DataManager.js  DerivedDataGenerator.js  hintData.js  plateData.js  wordData.js
src/game/: GameAPI.js  LicensePlateSolver.js
src/ui/: eventHandler.js  styles.css  uiManager.js
src/utils/: statusManager.js
tests/: conftest.py  factories.py  test_container.py  test_settings.py
tests/api/: test_prediction_endpoints.py  test_scoring_endpoints.py  test_solver_endpoints.py
tests/e2e/: test_word_scoring_journey.py
tests/integration/: test_external_services.py  test_repositories.py
tests/mocks/: __init__.py  external_services.py  repositories.py
tests/performance/: test_api_performance.py
tools/: README.md  ollama_client.py  test_3d_system.py  test_system_health.py
(+29 files in other folders)
